--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your Github Unsername</title>
+    <title>My Website</title>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/theme.css">
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
   </head>
 
   <body>
     <div class='header'>
-      <h1>Your Name</h1>
+      <h1>Eliot</h1>
       <h2>Your Tagline</h2>
     </div>
 
     <div class='content'>
       <img src="assets/images/thumbnail.png" alt="Your Github Username" class="thumbnail">
       <p>
-        Who are you? What are you interested in? What are you doing to learn to code?
+        I'm a mentor
       </p>
     </div>
     <script src='assets/scripts/jquery-3.1.1.min.js'></script>
